# pose6d_estimation

./: .gitignore  CMakeLists.txt  README.md
aruco/: CMakeLists.txt  README.md
aruco/calib/: CMakeLists.txt  config.yaml  main.cpp
aruco/generator/: CMakeLists.txt  config.yaml  main.cpp
aruco/pose/: CMakeLists.txt  config.yaml  main.cpp
aruco/pose/assert/: intrinsic_calib.yaml
common/camera/: CMakeLists.txt  CameraBase.cpp  CameraBase.h  OrbbecCamera.cpp  OrbbecCamera.h  RealSenseCamera.cpp  RealSenseCamera.h
scripts/: build_opencv.sh  build_orbbec.sh  build_realsense.sh  build_stag.sh  install_opencv.bat  install_orbbec.bat  install_realsense.bat  install_stag.bat
stag/: CMakeLists.txt  README.md
stag/generator/: CMakeLists.txt  config.yaml  main_linux.cpp  main_windows.cpp
stag/pose/: CMakeLists.txt  config.yaml  main.cpp
stag/pose/assert/: intrinsic_calib.yaml
